# project_template

./: .gitignore  .pre-commit-config.yaml  AI_Coding style.md  Makefile  README.md  README_template.md  environment.yml  pyproject.toml  setup.sh  setup_project.sh
notebooks/: explore.ipynb
project_template/: __init__.py  paths_and_constants.py  utils.py  vis.py
src/: paths_and_constants.py
