[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_template"
version = "0.0.1"
description = "A template project for optimization and machine learning."
requires-python = ">=3.14"



[tool.ruff]
line-length = 88
src = ["project_template"]
include = ["pyproject.toml", "project_template/**/*.py"]

[tool.ruff.lint]
extend-select = [
  "I", # Add import sorting
  "N",   # enforce naming conventions, e.g. ClassName vs function_name
  "FBT", # detect boolean traps
  "BLE", # disallow catch-all exceptions
]

[tool.ruff.lint.isort]
known-first-party = ["project_template"]
force-sort-within-sections = true

[tool.pyright]
include = ["project_template"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.14"
pythonPlatform = "Linux"
typeCheckingMode = "standard"


